# portmap

./: .env-ci  .env-example  .eslintrc.json  .gcloudignore  .gitignore  LICENSE  README.md  app.yaml  main.py  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.github/workflows/: deploy.yml  django.yml  frontend-check.yml  lint-js.yml
deployment/ansible/: Makefile  hosts.ini  provision.yml  vars.yml
docs/: index.md
docs/howto/: configuration.md  deployment.md  frontend.md  installation.md  run.md  server-management.md  testing.md
docs/reference/: commands.md  static-pages.md
portmap/: asgi.py  github_auth.py  settings.py  slack.py  urls.py  utils.py  wsgi.py
portmap/core/: admin.py  articles.py  forms.py  models.py  tasks.py  track.py  views.py
portmap/core/migrations/: 0002_article.py  0003_feedback.py  0004_querylog.py  0005_usecasefeedback.py  0006_alter_usecasefeedback_destination_and_more.py  0007_datatype.py  (+2 more)
static/css/: article.css  base.css
static/js/: article.js  htmx.min.js  query_form.js
templates/: _base.html
templates/admin/: analytics.html
templates/core/: about.html  article.html  article_list.html  debug_article_list.html  debug_index.html  index.html  thankyou.html
templates/feeds/: article_description.html
templates/includes/: nav-bar.html
tests/: conftest.py  test_example.py
tests/core/: test_gh_articles.py  test_models.py
tests/e2e/: playwright_test_suite.py  test_article.py  test_example.py  test_find_articles.py  test_index.py  test_smoke.py
(+8 files in other folders)
