[tool.poetry]
name = "PortMap"
version = "0.1.0"
description = "Structured query of Portability content repository"
authors = ["Lisa Dusseault <lisa@dtinit.org>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.2.4"
django-extensions = "3.2.3"
Faker = "19.2.0"
django-allauth = "0.54.0"
argon2-cffi = "21.3.0"
django-htmx = "1.16.0"
django-environ = "0.10.0"
gunicorn = "21.2.0"
psycopg2-binary = "2.9.6"
django-structlog = "5.3.0"
pillow = "10.0.0"
rich = "13.5.2"

[tool.poetry.group.dev.dependencies]
django-browser-reload = "1.11.0"
django-debug-toolbar = "4.1.0"
pywatchman = "1.4.1"
bandit = "1.7.5"
black = "23.7.0"
flake8 = "6.1.0"
snoop = "0.4.3"
pre-commit = "3.3.3"
django-silk = "5.0.3"
isort = "5.12.0"
ipython = "8.14.0"

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
pytest-django = "4.5.2"
pytest-icdiff = "0.6"
pytest-randomly = "3.13.0"
pytest-cov = "4.1.0"
pytest-sugar = "0.9.7"
pytest-factoryboy = "2.5.1"
playwright = "1.36.0"

[tool.poetry.group.graphviz]
optional = true

[tool.poetry.group.graphviz.dependencies]
pydotplus = "2.0.2"
pygraphviz = "1.11"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.2"
mkdocs-material = "9.1.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
